# bazel-monorepo-sample

./: .bazelignore  README.md  WORKSPACE  package.json
bff/services/graphql/: BUILD.bazel  package.json
frontend/apps/ui/: BUILD.bazel  package.json
